Major changes between version 0.98.2 and 0.98.4.
------------------------------------------------
  - Added a proxy option which may be used to specify a particular
    interface to snoop as a proxy. One possible use for this would
    be to set up an ISDN interface "by the book", leave it in
    manual dial mode, and run diald with proxy isdn0 and device isdn0
    using the connect/disconnect scripts to trigger dialling and
    hangup. Then the kernel bloat used to do half the job diald
    can do would be redundant. (I haven't tried this yet. I don't
    have ISDN at home. Sponsorship is welcome :-) )
  - Ethertap/SLIP proxy is no longer a compile time option. Diald
    will search first for a usable ethertap interface and then
    fall back on using a pseudo terminalled SLIP interface if
    necessary. If all the SLIP interfaces are in use diald will
    come up with no proxy and you will have to "up" it manually.
  - If the lock option is specified we create a device lock
    for incoming devices if one does not already exist. This is
    because newer versions of the kernel ISDN code appear to bounce
    an existing connection if we attempt to dial an in-use ipppd
    device whereas previously it returned an error.
  - Use -defaultroute rather than nodefaultroute since pppd 2.2
    does not understand nodefaultroute.
  - Fix for compilation on Linux 2.0.x.

Major changes between version 0.98.2 and 0.98.3.
------------------------------------------------
  - Search for ip,route,ifconfig,bootpc in /bin and /usr/bin as
    well as /sbin and /usr/sbin.
  - Fixed the bug that prevented -daemon mode from working.
  - "diald -V", "diald -v" or "diald --version" simply prints the
    version number and exits. (I've even remembered to change the
    number in version.h finally!)
  - pppd is spawned with the nodefaultroute argument on its command
    line to avoid breakage with some systems which appear to put
    a defaultroute in pppd's global options file.