@@ -7,6 +7,7 @@ sll address struct.
 
 Use a dummy interface rather than slip. It doesn't have to muck
 around passing packets as byte streams through a pseudo-terminal.
+-- Now with ethertap option.
 
 Add mechanisms for manual start/stop of other links when bandwidth
 thresholds are crossed. (e.g. slave ISDN links or equal-cost routes).
@@ -197,22 +198,9 @@ Log the pid of the ip-up script, put it in its own process group.
 If it is still around when we are about to take the link down
 kill it off first.
 
-dctrl appears to disconnect when diald goes from START_LINK to UP
-or DISCONNECT to CLOSE?
-
 The program paths (ifconfig, route, ip etc.) should be verified as
 part of the config checks. If we don't have enough to make things
 work we should not try to do anything.
-
-For masquerading dynamic addressed links we want to run the proxy
-with masquerading _disabled_. When the link comes up we set up
-masquerading (both proxy and real interface). After that point
-packets may be forward from proxy to real as normal (they are
-masqueraded as they hit either interface). The packets we have
-buffered before the link came up have ot been masqueraded. If we
-send them back to the kernel via the proxy the kernel will pass
-them through the routing/firewalling/masquerading again and should
-do the right thing?
 
 Diald sends data to monitors without caring if they receive it
 or not. This is a job for UDP not TCP. In fact diald sends the
