@@ -1,5 +1,8 @@
 Major changes between version 0.98.2 and 0.98.4.
 ------------------------------------------------
+  - Made local and remote addresses optional. If you are using a
+    named interface as proxy (or have no proxy at all) you may
+    not care about the addresses.
   - Added a proxy option which may be used to specify a particular
     interface to snoop as a proxy. One possible use for this would
     be to set up an ISDN interface "by the book", leave it in
